<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_main">

        <EditTextPreference
            app:key="player_name"
            app:title="@string/player_name_title"
            app:summary="@string/player_name_summary"
            app:defaultValue="@string/default_player_name"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="difficulty"
            app:title="@string/difficulty_title"
            app:summary="@string/difficulty_summary"
            app:entries="@array/difficulty_entries"
            app:entryValues="@array/difficulty_values"
            app:defaultValue="medium"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="sound_enabled"
            app:title="@string/sound_title"
            app:summary="@string/sound_summary"
            app:defaultValue="true" />

        <SwitchPreference
            app:key="vibration_enabled"
            app:title="@string/vibration_title"
            app:summary="@string/vibration_summary"
            app:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>